Fix image source path in PVC work gallery

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ function showWork(id){
 <h2>PVC Work</h2>
 <div class="grid">
     
-        <img src="pvc/WhatsApp Image 2025-12-22 at 19.29.33.jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.29.44.jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.29.49.jpeg">
+        <img src="WhatsApp Image 2025-12-22 at 19.29.33.jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.29.44.jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.29.49.jpeg">
 <img src="pvc/WhatsApp Image 2025-12-22 at 19.29.58.jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.29.59 (1).jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.29.59.jpeg">
 <img src="pvc/WhatsApp Image 2025-12-22 at 19.30.00.jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.30.02.jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.30.03.jpeg">
 <img src="pvc/WhatsApp Image 2025-12-22 at 19.30.04.jpeg">
