Update image sources in index.html

--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@ function showWork(id){
 <h2>PVC Work</h2>
 <div class="grid">
     
-        <img src="WhatsApp Image 2025-12-22 at 19.29.33.jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.29.44.jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.29.49.jpeg">
-<img src="pvc/WhatsApp Image 2025-12-22 at 19.29.58.jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.29.59 (1).jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.29.59.jpeg">
-<img src="pvc/WhatsApp Image 2025-12-22 at 19.30.00.jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.30.02.jpeg"><img src="pvc/WhatsApp Image 2025-12-22 at 19.30.03.jpeg">
-<img src="pvc/WhatsApp Image 2025-12-22 at 19.30.04.jpeg">
+        <img src="WhatsApp Image 2025-12-22 at 19.29.33.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.29.44.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.29.49.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.29.58.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.29.59 (1).jpeg"><img src="WhatsApp Image 2025-12-22 at 19.29.59.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.30.00.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.30.02.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.30.03.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.30.04.jpeg">
    
 
 
@@ -278,10 +278,10 @@ function showWork(id){
 <div id="gate" class="work-gallery">
 <h2>Steel Gate</h2>
 <div class="grid">
-<img src="steal gate/gate.jpeg"><img src="steal gate/SS-MG_21.jpeg"><img src="steal gate/steal gatejpeg.jpeg">
-<img src="steal gate/WhatsApp Image 2025-12-22 at 19.26.17.jpeg"><img src="steal gate/WhatsApp Image 2025-12-22 at 19.26.19.jpeg"><img src="steal gate/WhatsApp Image 2025-12-22 at 19.26.21.jpeg">
-<img src="steal gate/WhatsApp Image 2025-12-22 at 19.26.23.jpeg"><img src="steal gate/WhatsApp Image 2025-12-22 at 19.26.29.jpeg"><img src="steal gate/WhatsApp Image 2025-12-22 at 19.26.37.jpeg">
-<img src="steal gate/WhatsApp Image 2025-12-22 at 19.26.38.jpeg">
+<img src="gate.jpeg"><img src="SS-MG_21.jpeg"><img src="steal gatejpeg.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.26.17.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.26.19.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.26.21.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.26.23.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.26.29.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.26.37.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.26.38.jpeg">
 </div>
 </div>
 
@@ -289,10 +289,10 @@ function showWork(id){
 <div id="railing" class="work-gallery">
 <h2>Steel Railing</h2>
 <div class="grid">
-<img src="steal railing/WhatsApp Image 2025-12-22 at 19.24.36.jpeg"><img src="steal railing/WhatsApp Image 2025-12-22 at 19.24.38.jpeg"><img src="steal railing/WhatsApp Image 2025-12-22 at 19.24.45 (1).jpeg">
-<img src="steal railing/WhatsApp Image 2025-12-22 at 19.24.45.jpeg"><img src="steal railing/WhatsApp Image 2025-12-22 at 19.24.46.jpeg"><img src="steal railing/railing.jpeg">
-<img src="steal railing/WhatsApp Image 2025-12-22 at 19.24.48 (1).jpeg"><img src="steal railing/WhatsApp Image 2025-12-22 at 19.24.48.jpeg"><img src="steal railing/WhatsApp Image 2025-12-22 at 19.24.51 (1).jpeg">
-<img src="steal railing/WhatsApp Image 2025-12-22 at 19.24.51.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.24.36.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.24.38.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.24.45 (1).jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.24.45.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.24.46.jpeg"><img src="railing.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.24.48 (1).jpeg"><img src="WhatsApp Image 2025-12-22 at 19.24.48.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.24.51 (1).jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.24.51.jpeg">
 </div>
 </div>
 
@@ -300,10 +300,10 @@ function showWork(id){
 <div id="aluminium" class="work-gallery">
 <h2>Aluminium Work</h2>
 <div class="grid">
-<img src="aluminium/WhatsApp Image 2025-12-22 at 19.23.00.jpeg"><img src="aluminium/WhatsApp Image 2025-12-22 at 19.23.01.jpeg"><img src="aluminium/WhatsApp Image 2025-12-22 at 19.23.04.jpeg">
-<img src="aluminium/WhatsApp Image 2025-12-22 at 19.23.05 (1).jpeg"><img src="aluminium/WhatsApp Image 2025-12-22 at 19.23.05.jpeg"><img src="aluminium/WhatsApp Image 2025-12-22 at 19.23.07.jpeg">
-<img src="aluminium/WhatsApp Image 2025-12-22 at 19.23.08 (1).jpeg"><img src="aluminium/WhatsApp Image 2025-12-22 at 19.23.08.jpeg"><img src="aluminium/WhatsApp Image 2025-12-22 at 19.23.10.jpeg">
-<img src="aluminium/WhatsApp Image 2025-12-22 at 19.23.12.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.23.00.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.23.01.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.23.04.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.23.05 (1).jpeg"><img src="WhatsApp Image 2025-12-22 at 19.23.05.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.23.07.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.23.08 (1).jpeg"><img src="WhatsApp Image 2025-12-22 at 19.23.08.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.23.10.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.23.12.jpeg">
 </div>
 </div>
 
@@ -313,11 +313,11 @@ function showWork(id){
 <div id="glass" class="work-gallery">
 <h2>Glass Work</h2>
 <div class="grid">
-<img src="glass/WhatsApp Image 2025-12-22 at 19.07.18.jpeg"><img src="glass/WhatsApp Image 2025-12-22 at 19.07.21.jpeg"><img src="glass/WhatsApp Image 2025-12-22 at 19.07.25.jpeg">
-<img src="glass/WhatsApp Image 2025-12-22 at 19.07.52.jpeg"><img src="glass/WhatsApp Image 2025-12-22 at 19.08.22.jpeg"><img src="glass/WhatsApp Image 2025-12-22 at 19.08.23.jpeg">
-<img src="glass/WhatsApp Image 2025-12-22 at 19.08.25.jpeg"><img src="glass/WhatsApp Image 2025-12-22 at 19.08.27.jpeg"><img src="glass/WhatsApp Image 2025-12-22 at 19.12.48.jpeg">
-<img src="glass/WhatsApp Image 2025-12-22 at 19.12.57.jpeg"><video autoplay muted loop playsinline>
-  <source src="glass/WhatsApp Video 2025-12-22 at 19.08.31.mp4" type="video/mp4">
+<img src="WhatsApp Image 2025-12-22 at 19.07.18.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.07.21.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.07.25.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.07.52.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.08.22.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.08.23.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.08.25.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.08.27.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.12.48.jpeg">
+<img src="WhatsApp Image 2025-12-22 at 19.12.57.jpeg"><video autoplay muted loop playsinline>
+  <source src="WhatsApp Video 2025-12-22 at 19.08.31.mp4" type="video/mp4">
 </video>
 
 </div>
