--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ nav a:hover::after{width:100%;}
 
 /* HERO */
 .hero{
+    position:relative;
   height:95vh;
   background:
     linear-gradient(rgba(10, 13, 23, 0.55), rgba(2,6,23,.65)),
@@ -92,13 +93,108 @@ nav a:hover::after{width:100%;}
   justify-content:center;
   text-align:center;
 }
-
-
-
-.hero h2{
-  font-size:52px;
-  color:#faf8f8;
+.hero::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:#ffffff;
+  opacity:0;
+  animation:lightning 1.5s ease;
+  pointer-events:none;
 }
+
+@keyframes lightning{
+  0%{opacity:0;}
+  10%{opacity:1;}
+  20%{opacity:0;}
+  30%{opacity:.8;}
+  40%{opacity:0;}
+  100%{opacity:0;}
+}
+
+
+
+/* AD CONTAINER */
+.hero-ad{
+  overflow:hidden;
+}
+
+/* BRAND NAME */
+#brandName{
+  font-size:52px;
+  color:#ffffff;
+  white-space:nowrap;
+  opacity:0;
+  transform:scale(0.7);
+  text-shadow:0 0 25px rgba(255,255,255,0.9);
+}
+
+/* TAGLINE */
+.tagline{
+  margin-top:15px;
+  font-size:18px;
+  color:#e5e7eb;
+  opacity:0;
+  animation: fadeIn 2s ease forwards;
+  animation-delay:2.2s;
+}
+
+/* ⚡ LIGHTNING FLASH EFFECT */
+.hero::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:rgba(255,255,255,0.9);
+  opacity:0;
+  animation: lightning 1.5s ease;
+  pointer-events:none;
+}
+
+@keyframes lightning{
+  0%{opacity:0;}
+  10%{opacity:1;}
+  20%{opacity:0;}
+  30%{opacity:0.8;}
+  40%{opacity:0;}
+  100%{opacity:0;}
+}
+
+/* ENTRY ANIMATION */
+@keyframes adEntry{
+  0%{
+    opacity:0;
+    transform:scale(0.6);
+    filter:blur(6px);
+  }
+  100%{
+    opacity:1;
+    transform:scale(1);
+    filter:blur(0);
+  }
+}
+
+/* SLIDE ANIMATION */
+@keyframes slideName{
+  from{
+    transform:translateX(100%);
+  }
+  to{
+    transform:translateX(-100%);
+  }
+}
+
+/* FADE */
+@keyframes fadeIn{
+  to{opacity:1;}
+}
+
+/* MOBILE */
+@media(max-width:768px){
+  #brandName{
+    font-size:28px;
+  }
+}
+
 .hero p{
   margin-top:15px;
   font-size:18px;
@@ -218,6 +314,28 @@ footer{
   section{padding:70px 25px;}
   .hero h2{font-size:34px;}
 }
+    @keyframes adEntry{
+  from{
+    opacity:0;
+    transform:scale(.6);
+    filter:blur(6px);
+  }
+  to{
+    opacity:1;
+    transform:scale(1);
+    filter:blur(0);
+  }
+}
+
+@keyframes slideName{
+  from{transform:translateX(100%);}
+  to{transform:translateX(-100%);}
+}
+
+@keyframes fadeIn{
+  to{opacity:1;}
+}
+
 </style>
 
 <script>
@@ -241,11 +359,14 @@ function showWork(id){
 
 
 <div class="hero">
-<div>
-<h1>𝕄𝕒𝕙𝕒𝕕𝕖𝕧 𝔾𝕝𝕒𝕤𝕤 𝔸𝕝𝕦𝕞𝕚𝕟𝕚𝕦𝕞 & 𝕊𝕥𝕖𝕖𝕝 𝕎𝕠𝕣𝕜𝕤𝕙𝕠𝕡</h1>
-<p>“Built with Quality. Delivered with Trust.”</p>
+  <div class="hero-ad">
+    <h1 id="brandName">
+      𝕄𝕒𝕙𝕒𝕕𝕖𝕧 𝔾𝕝𝕒𝕤𝕤 𝔸𝕝𝕦𝕞𝕚𝕟𝕚𝕦𝕞 & 𝕊𝕥𝕖𝕖𝕝 𝕎𝕠𝕣𝕜𝕤𝕙𝕠𝕡
+    </h1>
+    <p class="tagline">Built with Quality • Delivered with Trust</p>
+  </div>
 </div>
-</div>
+
 
 <!-- SERVICES -->
 <section id="services">
@@ -351,6 +472,19 @@ function showWork(id){
 <br>
 Satyu Rajpura Road, Taranagar (Churu), Rajasthan – 331304
 </footer>
+<script>
+window.addEventListener("load",()=>{
+  const name=document.getElementById("brandName");
+
+  // entry animation
+  name.style.animation="adEntry 2s ease forwards";
+
+  // slide after 3 sec
+  setTimeout(()=>{
+    name.style.animation="slideName 15s linear infinite";
+  },3000);
+});
+</script>
 
 </body>
 </html>
