--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+ <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -83,118 +84,24 @@ nav a:hover::after{width:100%;}
 
 /* HERO */
 .hero{
-    position:relative;
-  height:95vh;
-  background:
-    linear-gradient(rgba(10, 13, 23, 0.55), rgba(2,6,23,.65)),
-    url("img.jpeg") center/cover no-repeat;
+  height:80vh;
   display:flex;
-  align-items:center;
   justify-content:center;
+  align-items:center;
   text-align:center;
+  background:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('hero-bg.jpg') no-repeat center/cover;
 }
-.hero::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:#ffffff;
-  opacity:0;
-  animation:lightning 1.5s ease;
-  pointer-events:none;
-}
-
-@keyframes lightning{
-  0%{opacity:0;}
-  10%{opacity:1;}
-  20%{opacity:0;}
-  30%{opacity:.8;}
-  40%{opacity:0;}
-  100%{opacity:0;}
-}
-
-
-
-/* AD CONTAINER */
-.hero-ad{
-  overflow:hidden;
-}
-
-/* BRAND NAME */
-#brandName{
-  font-size:52px;
+.hero h1{
+  font-size:64px;
   color:#ffffff;
-  white-space:nowrap;
-  opacity:0;
-  transform:scale(0.7);
-  text-shadow:0 0 25px rgba(255,255,255,0.9);
 }
 
-/* TAGLINE */
-.tagline{
-  margin-top:15px;
-  font-size:18px;
-  color:#e5e7eb;
-  opacity:0;
-  animation: fadeIn 2s ease forwards;
-  animation-delay:2.2s;
-}
 
-/* ⚡ LIGHTNING FLASH EFFECT */
-.hero::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:rgba(255,255,255,0.9);
-  opacity:0;
-  animation: lightning 1.5s ease;
-  pointer-events:none;
-}
 
-@keyframes lightning{
-  0%{opacity:0;}
-  10%{opacity:1;}
-  20%{opacity:0;}
-  30%{opacity:0.8;}
-  40%{opacity:0;}
-  100%{opacity:0;}
+.hero h2{
+  font-size:52px;
+  color:#faf8f8;
 }
-
-/* ENTRY ANIMATION */
-@keyframes adEntry{
-  0%{
-    opacity:0;
-    transform:scale(0.6);
-    filter:blur(6px);
-  }
-  100%{
-    opacity:1;
-    transform:scale(1);
-    filter:blur(0);
-  }
-}
-
-/* SLIDE ANIMATION */
-@keyframes slideName{
-  from{
-    transform:translateX(100%);
-  }
-  to{
-    transform:translateX(-100%);
-  }
-}
-
-/* FADE */
-@keyframes fadeIn{
-  to{opacity:1;}
-}
-
-/* MOBILE */
-@media(max-width:768px){
-  #brandName{
-    font-size:28px;
-  }
-}
-
 .hero p{
   margin-top:15px;
   font-size:18px;
@@ -314,28 +221,6 @@ footer{
   section{padding:70px 25px;}
   .hero h2{font-size:34px;}
 }
-    @keyframes adEntry{
-  from{
-    opacity:0;
-    transform:scale(.6);
-    filter:blur(6px);
-  }
-  to{
-    opacity:1;
-    transform:scale(1);
-    filter:blur(0);
-  }
-}
-
-@keyframes slideName{
-  from{transform:translateX(100%);}
-  to{transform:translateX(-100%);}
-}
-
-@keyframes fadeIn{
-  to{opacity:1;}
-}
-
 </style>
 
 <script>
@@ -359,14 +244,11 @@ function showWork(id){
 
 
 <div class="hero">
-  <div class="hero-ad">
-    <h1 id="brandName">
-      𝕄𝕒𝕙𝕒𝕕𝕖𝕧 𝔾𝕝𝕒𝕤𝕤 𝔸𝕝𝕦𝕞𝕚𝕟𝕚𝕦𝕞 & 𝕊𝕥𝕖𝕖𝕝 𝕎𝕠𝕣𝕜𝕤𝕙𝕠𝕡
-    </h1>
-    <p class="tagline">Built with Quality • Delivered with Trust</p>
-  </div>
+<div>
+<h1>𝕄𝕒𝕙𝕒𝕕𝕖𝕧 𝔾𝕝𝕒𝕤𝕤 𝔸𝕝𝕦𝕞𝕚𝕟𝕚𝕦𝕞 & 𝕊𝕥𝕖𝕖𝕝 𝕎𝕠𝕣𝕜𝕤𝕙𝕠𝕡</h1>
+<p>“Built with Quality. Delivered with Trust.”</p>
 </div>
-
+</div>
 
 <!-- SERVICES -->
 <section id="services">
@@ -399,7 +281,7 @@ function showWork(id){
 <div id="gate" class="work-gallery">
 <h2>Steel Gate</h2>
 <div class="grid">
-<img src="gate.jpeg"><img src="SS-MG_21.jpeg"><img src="steal gatejpeg.jpeg">
+<img src="gate.jpeg"><img src="steal gate/SS-MG_21.jpeg"><img src="steal gatejpeg.jpeg">
 <img src="WhatsApp Image 2025-12-22 at 19.26.17.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.26.19.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.26.21.jpeg">
 <img src="WhatsApp Image 2025-12-22 at 19.26.23.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.26.29.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.26.37.jpeg">
 <img src="WhatsApp Image 2025-12-22 at 19.26.38.jpeg">
@@ -472,19 +354,6 @@ function showWork(id){
 <br>
 Satyu Rajpura Road, Taranagar (Churu), Rajasthan – 331304
 </footer>
-<script>
-window.addEventListener("load",()=>{
-  const name=document.getElementById("brandName");
-
-  // entry animation
-  name.style.animation="adEntry 2s ease forwards";
-
-  // slide after 3 sec
-  setTimeout(()=>{
-    name.style.animation="slideName 15s linear infinite";
-  },3000);
-});
-</script>
 
 </body>
 </html>
