--- a/index.html
+++ b/index.html
@@ -24,25 +24,24 @@
   50%  { opacity: 0.3; }
   100% { opacity: 1; }
 }
-body{
-  position: relative;
-  z-index: 1;
-  background: transparent;
- 
-  color: #e5e7eb;
-}
+
 
 #sparkCanvas{
   position: fixed;
-  top: 0;
-  left: 0;
+  inset: 0;
   width: 100vw;
   height: 100vh;
   z-index: 0;
   pointer-events: none;
- background: radial-gradient(circle at center, #020617, #000);
-
+  background: radial-gradient(circle at center, #020617, #000);
 }
+
+body{
+  background: transparent;
+  position: relative;
+  z-index: 1;
+}
+
 
 
 
@@ -393,20 +392,15 @@ Satyu Rajpura Road, Taranagar (Churu), Rajasthan – 331304
 
 
 
-<audio id="robotSound" preload="auto">
-  <source src="robot-click.mp3" type="audio/mpeg">
-</audio>
+
 
  <canvas id="sparkCanvas"></canvas>
 
 
 
 <script>
-/* ===== SPARK + ROBOT SOUND ===== */
-
 const canvas = document.getElementById("sparkCanvas");
 const ctx = canvas.getContext("2d");
-const sound = document.getElementById("robotSound");
 
 function resize(){
   canvas.width = innerWidth;
@@ -415,15 +409,16 @@ function resize(){
 resize();
 addEventListener("resize", resize);
 
-let sparks = [];
+let particles = [];
 
-function createSpark(x,y){
-  for(let i=0;i<6;i++){
-    sparks.push({
-      x,y,
-      vx:(Math.random()-0.5)*6,
-      vy:(Math.random()-0.5)*6,
-      life:30
+function spark(x, y){
+  for(let i=0;i<12;i++){
+    particles.push({
+      x, y,
+      vx:(Math.random()-0.5)*8,
+      vy:(Math.random()-0.5)*8,
+      life: 40,
+      size: Math.random()*2+1
     });
   }
 }
@@ -431,42 +426,40 @@ function createSpark(x,y){
 function animate(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
-  sparks.forEach((s,i)=>{
-    s.x+=s.vx;
-    s.y+=s.vy;
-    s.life--;
+  particles.forEach((p,i)=>{
+    p.x += p.vx;
+    p.y += p.vy;
+    p.life--;
 
-    ctx.fillStyle = "rgba(255,160,40,"+(s.life/30)+")";
-    ctx.fillRect(s.x,s.y,2,2);
+    ctx.fillStyle = `rgba(255,160,40,${p.life/40})`;
+    ctx.beginPath();
+    ctx.arc(p.x,p.y,p.size,0,Math.PI*2);
+    ctx.fill();
 
-    if(s.life<=0) sparks.splice(i,1);
+    if(p.life<=0) particles.splice(i,1);
   });
 
   requestAnimationFrame(animate);
 }
 animate();
 
-/* desktop click */
+/* mouse */
+addEventListener("mousemove",(e)=>{
+  spark(e.clientX, e.clientY);
+});
+
+/* click boost */
 addEventListener("click",(e)=>{
-  createSpark(e.clientX,e.clientY);
-  sound.currentTime = 0;
-  sound.play();
+  spark(e.clientX, e.clientY);
 });
 
-/* mobile touch */
-addEventListener("touchstart",(e)=>{
+/* mobile */
+addEventListener("touchmove",(e)=>{
   const t = e.touches[0];
-  createSpark(t.clientX, t.clientY);
-  sound.currentTime = 0;
-  sound.play();
+  spark(t.clientX, t.clientY);
 });
-
-/* browser sound unlock */
-document.body.addEventListener("click", ()=>{
-  sound.play().then(()=>sound.pause()).catch(()=>{});
-},{ once:true });
-
 </script>
+
 
 </body>
 </html>
