--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 }
 
 
+
 #sparkCanvas{
   position: fixed;
   inset: 0;
@@ -403,62 +404,88 @@ const canvas = document.getElementById("sparkCanvas");
 const ctx = canvas.getContext("2d");
 
 function resize(){
-  canvas.width = innerWidth;
-  canvas.height = innerHeight;
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
 }
 resize();
-addEventListener("resize", resize);
+window.addEventListener("resize", resize);
 
-let particles = [];
+/* ========= BACKGROUND PARTICLES ========= */
+const particles = [];
+const BG_COUNT = 120;
 
-function spark(x, y){
+for(let i=0;i<BG_COUNT;i++){
+  particles.push({
+    x: Math.random()*canvas.width,
+    y: Math.random()*canvas.height,
+    vx:(Math.random()-0.5)*0.3,
+    vy:(Math.random()-0.5)*0.3,
+    r: Math.random()*1.6+0.4
+  });
+}
+
+/* ========= CLICK SPARKS ========= */
+const sparks = [];
+
+function spark(x,y){
   for(let i=0;i<12;i++){
-    particles.push({
-      x, y,
-      vx:(Math.random()-0.5)*8,
-      vy:(Math.random()-0.5)*8,
-      life: 40,
-      size: Math.random()*2+1
+    sparks.push({
+      x,y,
+      vx:(Math.random()-0.5)*6,
+      vy:(Math.random()-0.5)*6,
+      life:30,
+      r: Math.random()*2+1
     });
   }
 }
 
+/* ========= ANIMATION ========= */
 function animate(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
-  particles.forEach((p,i)=>{
-    p.x += p.vx;
-    p.y += p.vy;
-    p.life--;
+  /* background blue particles */
+  particles.forEach(p=>{
+    p.x+=p.vx;
+    p.y+=p.vy;
 
-    ctx.fillStyle = `rgba(255,160,40,${p.life/40})`;
+    if(p.x<0||p.x>canvas.width) p.vx*=-1;
+    if(p.y<0||p.y>canvas.height) p.vy*=-1;
+
+    ctx.fillStyle="rgba(56,189,248,0.6)";
     ctx.beginPath();
-    ctx.arc(p.x,p.y,p.size,0,Math.PI*2);
+    ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+    ctx.fill();
+  });
+
+  /* blue sparks */
+  sparks.forEach((s,i)=>{
+    s.x+=s.vx;
+    s.y+=s.vy;
+    s.life--;
+
+    ctx.fillStyle=`rgba(56,189,248,${s.life/30})`;
+    ctx.beginPath();
+    ctx.arc(s.x,s.y,s.r,0,Math.PI*2);
     ctx.fill();
 
-    if(p.life<=0) particles.splice(i,1);
+    if(s.life<=0) sparks.splice(i,1);
   });
 
   requestAnimationFrame(animate);
 }
 animate();
 
-/* mouse */
-addEventListener("mousemove",(e)=>{
-  spark(e.clientX, e.clientY);
+/* ========= EVENTS ========= */
+window.addEventListener("click",e=>{
+  spark(e.clientX,e.clientY);
 });
 
-/* click boost */
-addEventListener("click",(e)=>{
-  spark(e.clientX, e.clientY);
-});
-
-/* mobile */
-addEventListener("touchmove",(e)=>{
-  const t = e.touches[0];
-  spark(t.clientX, t.clientY);
+window.addEventListener("touchstart",e=>{
+  const t=e.touches[0];
+  spark(t.clientX,t.clientY);
 });
 </script>
+
 
 
 </body>
