--- a/index.html
+++ b/index.html
@@ -62,16 +62,19 @@
   inset: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 0;
+  z-index: -1;
   pointer-events: none;
   background: radial-gradient(circle at center, #020617, #000);
 }
 
 body{
   background: transparent;
-  position: relative;
-  z-index: 1;
+  margin: 0;
+  padding: 0;
+  background: transparent;
+  overflow-x: hidden;
 }
+
 
 
 
