Update viewport meta tag and adjust canvas height

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover">
 <title>Mahadev Glass Aluminium & Steel Work</title>
 
 <style>
@@ -61,7 +61,7 @@
   position: fixed;
   inset: 0;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   z-index: -1;
   pointer-events: none;
   background: radial-gradient(circle at center, #020617, #000);
