--- a/index.html
+++ b/index.html
@@ -62,11 +62,14 @@
   inset: 0;
   width: 100vw;
   min-height: 100vh;
-  z-index: -1;
+  z-index: 0;
   pointer-events: none;
   background: radial-gradient(circle at center, #020617, #000);
 }
-
+#site-content{
+ position:relative;
+ z-index:2;
+}
 body{
   background: transparent;
   margin: 0;
