--- a/index.html
+++ b/index.html
@@ -59,13 +59,20 @@
 
 #sparkCanvas{
   position: fixed;
-  inset: 0;
-  width: 100vw;
-  min-height: 100vh;
-  z-index: -1;
-  pointer-events: none;
+  top:0;
+  left:0;
+  width:100%;
+  height:100svh;
+  z-index:-1;
+  pointer-events:none;
   background: radial-gradient(circle at center, #020617, #000);
 }
+
+html, body{
+  background:#020617;
+  overflow-x:hidden;
+}
+
 #site-content{
  position:relative;
  z-index:2;
@@ -421,24 +428,24 @@ function showWork(id){
 Satyu Rajpura Road, Taranagar (Churu), Rajasthan – 331304
 </footer>
 
-
-
-
-
-
-
-
-
 <script>
 const canvas = document.getElementById("sparkCanvas");
 const ctx = canvas.getContext("2d");
 
+/* ========= RESIZE (MOBILE SAFE) ========= */
 function resize(){
   canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
+  canvas.height = document.documentElement.clientHeight;
 }
 resize();
-window.addEventListener("resize", resize);
+
+let lastWidth = window.innerWidth;
+window.addEventListener("resize", () => {
+  if (window.innerWidth !== lastWidth) {
+    lastWidth = window.innerWidth;
+    resize();
+  }
+});
 
 /* ========= BACKGROUND PARTICLES ========= */
 const particles = [];
@@ -448,18 +455,17 @@ for(let i=0;i<BG_COUNT;i++){
   particles.push({
     x: Math.random()*canvas.width,
     y: Math.random()*canvas.height,
-    vx:(Math.random()-0.5)*0.3,
-    vy:(Math.random()-0.5)*0.3,
-   r: Math.random()*2.2+0.8
-
+    vx:(Math.random()-0.5)*0.25,
+    vy:(Math.random()-0.5)*0.25,
+    r: Math.random()*2+1
   });
 }
 
-/* ========= CLICK SPARKS ========= */
+/* ========= CLICK / TOUCH SPARKS ========= */
 const sparks = [];
 
 function spark(x,y){
-  for(let i=0;i<12;i++){
+  for(let i=0;i<14;i++){
     sparks.push({
       x,y,
       vx:(Math.random()-0.5)*6,
@@ -470,41 +476,41 @@ function spark(x,y){
   }
 }
 
-/* ========= ANIMATION ========= */
+/* ========= ANIMATION LOOP ========= */
 function animate(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
   /* background blue particles */
-  particles.forEach(p=>{
-    p.x+=p.vx;
-    p.y+=p.vy;
+  for(const p of particles){
+    p.x += p.vx;
+    p.y += p.vy;
 
     if(p.x<0||p.x>canvas.width) p.vx*=-1;
     if(p.y<0||p.y>canvas.height) p.vy*=-1;
 
-  ctx.shadowColor = "rgba(0,200,255,1)";
-ctx.shadowBlur = 12;
-ctx.fillStyle = "rgba(0,200,255,0.9)";
-
+    ctx.shadowColor = "rgba(0,200,255,1)";
+    ctx.shadowBlur = 12;
+    ctx.fillStyle = "rgba(0,200,255,0.9)";
     ctx.beginPath();
     ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
     ctx.fill();
-   ctx.shadowBlur = 0;
-  });
+    ctx.shadowBlur = 0;
+  }
 
-  /* blue sparks */
-  sparks.forEach((s,i)=>{
-    s.x+=s.vx;
-    s.y+=s.vy;
+  /* sparks (REVERSE LOOP – IMPORTANT) */
+  for(let i=sparks.length-1;i>=0;i--){
+    const s = sparks[i];
+    s.x += s.vx;
+    s.y += s.vy;
     s.life--;
 
-    ctx.fillStyle=`rgba(56,189,248,${s.life/30})`;
+    ctx.fillStyle = `rgba(56,189,248,${s.life/30})`;
     ctx.beginPath();
     ctx.arc(s.x,s.y,s.r,0,Math.PI*2);
     ctx.fill();
 
     if(s.life<=0) sparks.splice(i,1);
-  });
+  }
 
   requestAnimationFrame(animate);
 }
@@ -516,12 +522,11 @@ window.addEventListener("click",e=>{
 });
 
 window.addEventListener("touchstart",e=>{
-  const t=e.touches[0];
+  e.preventDefault();          // 🔥 STOP SCROLL JUMP
+  const t = e.touches[0];
   spark(t.clientX,t.clientY);
-});
+},{ passive:false });
 </script>
-
-
 
 </body>
 </html>
