--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ nav a:hover::after{width:100%;}
 
 /* HERO */
 .hero{
-  height:80vh;
+  min-height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
