--- a/index.html
+++ b/index.html
@@ -54,28 +54,38 @@
     text-shadow: 0 0 6px rgba(0,200,255,0.4);
   }
 }
-
-
-#sparkCanvas{
-  position: fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100svh;
-  z-index:-1;
-  pointer-events:none;
-  background: radial-gradient(circle at center, #020617, #000);
-}
-
 html, body{
+  margin:0;
+  padding:0;
+  width:100%;
+  min-height:100%;
   background:#020617;
   overflow-x:hidden;
 }
 
-#site-content{
- position:relative;
- z-index:2;
+#bg-wrap{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  min-height:100%;
+  z-index:0;
+  overflow:hidden;
 }
+
+#sparkCanvas{
+  width:100%;
+  height:100%;
+  display:block;
+}
+
+#site-content{
+  position:relative;
+  z-index:2;
+}
+
+
 body{
   background: transparent;
   margin: 0;
