--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@ html, body{
   min-height:100%;
   z-index:0;
   overflow:hidden;
+    pointer-events:none; 
 }
 
 #sparkCanvas{
   width:100%;
   height:100%;
   display:block;
+    pointer-events:none; 
 }
 
 #site-content{
