--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ function showWork(id){
 <div id="gate" class="work-gallery">
 <h2>Steel Gate</h2>
 <div class="grid">
-<img src="gate.jpeg"><img src="steal gate/SS-MG_21.jpeg"><img src="steal gatejpeg.jpeg">
+<img src="gate.jpeg"><img src="SS-MG_21.jpeg"><img src="steal gatejpeg.jpeg">
 <img src="WhatsApp Image 2025-12-22 at 19.26.17.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.26.19.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.26.21.jpeg">
 <img src="WhatsApp Image 2025-12-22 at 19.26.23.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.26.29.jpeg"><img src="WhatsApp Image 2025-12-22 at 19.26.37.jpeg">
 <img src="WhatsApp Image 2025-12-22 at 19.26.38.jpeg">
