Update title and meta description in index.html
Updated title and meta description for SEO.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mahadev Glass Aluminium & Steel Work | Glass, Aluminium & Steel Workshop in Churu</title>
+<title>Mahadev Glass Aluminium & Steel Works | Taranagar Churu</title>
+
+<meta name="description" content="Mahadev Glass Aluminium & Steel Works - PVC work, Aluminium work, Steel gate, Steel railing & Glass work in Taranagar, Churu Rajasthan.">
+
 
 
 <style>
@@ -268,7 +271,7 @@ function showWork(id){
 
 <div class="hero">
 <div>
-<h2 class="blink-text">𝕄𝕒𝕙𝕒𝕕𝕖𝕧 𝔾𝕝𝕒𝕤𝕤 𝔸𝕝𝕦𝕞𝕚𝕟𝕚𝕦𝕞 & 𝕊𝕥𝕖𝕖𝕝 𝕎𝕠𝕣𝕜𝕤𝕙𝕠𝕡</h2>
+<h1 class="blink-text">𝕄𝕒𝕙𝕒𝕕𝕖𝕧 𝔾𝕝𝕒𝕤𝕤 𝔸𝕝𝕦𝕞𝕚𝕟𝕚𝕦𝕞 & 𝕊𝕥𝕖𝕖𝕝 𝕎𝕠𝕣𝕜𝕤𝕙𝕠𝕡</h1>
 <p>“Built with Quality. Delivered with Trust.”</p>
 
 </div>
