Update title and meta description in index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mahadev Glass Aluminium & Steel Works | Taranagar Churu</title>
+<title>Mahadev Glass Works | Mahadev Glass House – Glass Aluminium & Steel Work</title>
 
-<meta name="description" content="Mahadev Glass Aluminium & Steel Works - PVC work, Aluminium work, Steel gate, Steel railing & Glass work in Taranagar, Churu Rajasthan.">
+
+<meta name="description" content="Mahadev Glass Aluminium & Steel Works | Mahadev Glass House - PVC work, Aluminium work, Steel gate, Steel railing & Glass work in Taranagar, Churu Rajasthan.">
 
 
 
