--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
 
 <meta name="description" content="Mahadev Glass Aluminium & Steel Works | Mahadev Glass House - PVC work, Aluminium work, Steel gate, Steel railing & Glass work in Taranagar, Churu Rajasthan.">
-
+<meta name="geo.region" content="IN-RJ">
+<meta name="geo.placename" content="Churu, Rajasthan">
+<meta name="geo.position" content="28.3042;74.9672">
+<meta name="ICBM" content="28.3042, 74.9672">
+<meta name="keywords" content="Mahadev Glass House Taranagar, Mahadev Glass Works Churu, Glass Aluminium Steel Work Taranagar, Glass Shop Churu">
 
 
 <style>
@@ -27,6 +31,20 @@
   0%   { opacity: 1; }
   50%  { opacity: 0.3; }
   100% { opacity: 1; }
+}
+.location-section{
+  padding:40px 20px;
+  background:#020617;
+  color:#e5e7eb;
+}
+
+.location-section h2{
+  margin-bottom:15px;
+  color:#38bdf8;
+}
+
+.map-box{
+  margin:20px;
 }
 
 #particles-js {
@@ -419,11 +437,44 @@ function showWork(id){
 
 </div>
 </section>
+<section class="location-section">
+  <h2>📍 Mahadev Glass Aluminium & Steel Work (Mahadev Glass House)</h2>
+
+  <p>
+    Mahadev Glass Aluminium & Steel Work ek trusted glass aur steel work shop hai
+    jo <strong>Taranagar (Churu), Rajasthan</strong> me sthit hai.
+    Yaha glass railing, aluminium window, steel fabrication aur interior glass work
+    ka kaam kiya jata hai.
+  </p>
+
+  <p>
+    <strong>Address:</strong><br>
+    Salasar–Rajpura Road,<br>
+    Taranagar (Churu), Rajasthan – 331304
+  </p>
+
+  <p>
+    <strong>Call:</strong> 9509199663, 7375873487
+  </p>
+</section>
 
 <footer>
 © 2025 Mahadev Glass Aluminium & Steel Works 
 <br>
 Satyu Rajpura Road, Taranagar (Churu), Rajasthan – 331304
+ <!-- GOOGLE MAP LOCATION -->
+<section class="map-section">
+  <h2>📍 Our Location – Mahadev Glass Aluminium & Steel Work</h2>
+
+  <iframe
+    src="https://www.google.com/maps?q=Salasar-Rajpura+Road+Taranagar+Churu+Rajasthan&output=embed"
+    width="100%"
+    height="320"
+    style="border:0; border-radius:14px;"
+    loading="lazy">
+  </iframe>
+</section>
+
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
