--- a/index.html
+++ b/index.html
@@ -431,10 +431,10 @@ function showWork(id){
 Satyu Rajpura Road, Taranagar (Churu), Rajasthan – 331304
  <!-- GOOGLE MAP LOCATION -->
 <section class="map-section">
-  <h3>📍 Our Location – Mahadev Glass Aluminium & Steel Work</h3>
+  <h3>📍 Our Location – Mahadev Glass House </h3>
 
   <iframe
-    src="https://www.google.com/maps?q=Salasar-Rajpura+Road+Taranagar+Churu+Rajasthan&output=embed"
+    src="https://maps.app.goo.gl/ZvMRvbN1gaKbS2vr6?g_st=aw"
     width="100%"
     height="320"
     style="border:0; border-radius:14px;"
