--- a/index.html
+++ b/index.html
@@ -434,12 +434,15 @@ Satyu Rajpura Road, Taranagar (Churu), Rajasthan – 331304
   <h3>📍 Our Location – Mahadev Glass House </h3>
 
   <iframe
-    src="https://maps.app.goo.gl/ZvMRvbN1gaKbS2vr6?g_st=aw"
-    width="100%"
-    height="320"
-    style="border:0; border-radius:14px;"
-    loading="lazy">
-  </iframe>
+  src="https://www.google.com/maps?q=Mahadev+Glass+House+Taranagar+Rajasthan&output=embed"
+  width="100%"
+  height="320"
+  style="border:0; border-radius:14px;"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
+
 </section>
 
 </footer>
