Update keywords meta tag in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="geo.placename" content="Churu, Rajasthan">
 <meta name="geo.position" content="28.3042;74.9672">
 <meta name="ICBM" content="28.3042, 74.9672">
-<meta name="keywords" content="Mahadev Glass House Taranagar, Mahadev Glass Works Churu, Glass Aluminium Steel Work Taranagar, Glass Shop Churu">
+<meta name="keywords" content=" mahadev glass house , Mahadev Glass House , Mahadev Glass House Taranagar, Mahadev Glass Works Churu, Glass Aluminium Steel Work Taranagar, Glass Shop Churu">
 
 
 <style>
